feat: docker compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,29 @@
-﻿services:
+﻿name: taskboard-cyberpunk-2027
+services:
   taskboarddemo:
     image: taskboarddemo
     build:
       context: .
       dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:8080
+      - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=database;Username=user;Password=password
+    depends_on:
+      - db
+    restart: unless-stopped
 
+  db:
+    image: ruiborda/taskboard-cyberpunk-2027:latest
+    container_name: taskboard-cyberpunk-2027-db
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: database
+    ports:
+      - "5432:5432"
+    restart: unless-stopped
+    volumes:
+      - ./docker_pg_data:/docker-entrypoint-initdb.d:ro
