--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,7 @@
 ﻿name: taskboard-cyberpunk-2027
 services:
   taskboarddemo:
-    image: taskboarddemo
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ruiborda/taskboard-cyberpunk-2027:latest
     ports:
       - "8080:8080"
     environment:
@@ -16,7 +13,7 @@ services:
     restart: unless-stopped
 
   db:
-    image: ruiborda/taskboard-cyberpunk-2027:latest
+    image: postgres:16
     container_name: taskboard-cyberpunk-2027-db
     environment:
       POSTGRES_USER: user
